# bugzilla-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  bugzilla_cli.py  build.rs  requirements-dev.txt
.claude/skills/bugzilla-dev/: skill.md
src/: client.rs  lib.rs  main.rs  watchlist.rs
tests/: conftest.py  integration.rs  test_bmo_client.py  test_integration.py  test_subcommands.py  test_watch_list.py
