[package]
name = "bugzilla-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "bugzilla_cli"
path = "src/lib.rs"

[[bin]]
name = "bugzilla-cli"
path = "src/main.rs"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
